--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
       referrerpolicy="no-referrer"
     />
 
-    <link rel="stylesheet" href="/css/styles.css" />
-    <link rel="stylesheet" href="/css/media.css" />
+    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="css/media.css" />
 
     <title>Portfolio</title>
   </head>
@@ -96,7 +96,7 @@
         </div>
 
         <div class="headIMG">
-          <img src="/images/headphoto.webp" alt="Thijs Brandhorst head" />
+          <img src="images/headphoto.webp" alt="Thijs Brandhorst head" />
         </div>
       </section>
 
@@ -165,7 +165,7 @@
       </section>
       <!--Showcase-->
       <section id="showcase" class="showcase-section">
-        
+
       </section>
 
       <!-- Contact -->
