--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <!-- NAVBAR -->
     <nav>
       <div class="left">
-        <a href="/">Thijs ----</a>
+        <a href="/">Thijs Brandhorst</a>
       </div>
       <div class="right">
         <!--Github-->
