--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <div class="right">
         <!--Github-->
         <a
-          href="https://github.com/ThijsBrandhorst"
+          href="https://github.com/ThijsB-Github"
           target="_blank"
           rel="noopener no-referrer"
         >
