--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <div class="right">
         <!--Github-->
         <a
-          href="https://github.com/ThijsB-Github"
+          href="https://github.com/ThijsBrandhorst"
           target="_blank"
           rel="noopener no-referrer"
         >
@@ -45,7 +45,7 @@
         </a>
         <!--Linkedin-->
         <a
-          href="https://www.linkedin.com/in/thijs-brandhorst-542644295/"
+          href="https://www.linkedin.com/in/thijs-brandhorst/"
           target="_blank"
           rel="noopener no-referrer"
         >
@@ -186,7 +186,7 @@
             <span>Galgje</span>
             <p>Galgje met HTML, JS en CSS</p>
             <a
-              href="https://github.com/ThijsB-Github/Galgje"
+              href="https://github.com/ThijsBrandhorst/Galgje"
               class="github-btn"
               target="_blank"
               >GitHub</a
@@ -198,7 +198,7 @@
             <span>Pokemon</span>
             <p>Pokemon game met Java</p>
             <a
-              href="https://github.com/ThijsB-Github/PokemonGame/tree/master"
+              href="https://github.com/ThijsBrandhorst/PokemonGame/tree/master"
               class="github-btn"
               target="_blank"
               >GitHub</a
@@ -210,7 +210,7 @@
             <span>Cardgame</span>
             <p>Cardgame met Java</p>
             <a
-              href="https://github.com/ThijsB-Github/CardGame"
+              href="https://github.com/ThijsBrandhorst/CardGame"
               class="github-btn"
               target="_blank"
               >GitHub</a
