--- a/index.html
+++ b/index.html
@@ -29,29 +29,30 @@
       <a href="/">Thijs Brandhorst</a>
     </div>
     <div class="right">
-      <!--Github-->
-      <a href="https://github.com/ThijsBrandhorst" target="_blank" rel="noopener no-referrer">
-        <i class="fa-brands fa-github"></i>
-        <span>GitHub</span>
-      </a>
-      <!--Linkedin-->
-      <a href="https://www.linkedin.com/in/thijs-brandhorst/" target="_blank" rel="noopener no-referrer">
-        <i class="fa-brands fa-linkedin"></i>
-        <span>Linkedin</span>
-      </a>
-      <!--CV-->
-      <a href="Files/ThijsBrandhorstCV.pdf" target="_blank" rel="noopener no-referrer">
-        <i class="fa-solid fa-file-pdf"></i>
-        <span>CV</span>
-      </a>
-      <!--Email-->
-      <a href="mailto:thijsbrandhorst007@gmail.com">
-        <i class="fa-solid fa-envelope"></i>
-        <span>Email</span>
-      </a>
+        <!--Github-->
+        <a href="https://github.com/ThijsBrandhorst" target="_blank" rel="noopener no-referrer">
+          <i class="fa-brands fa-github"></i>
+          <span>GitHub</span>
+        </a>
+        <!--Linkedin-->
+        <a href="https://www.linkedin.com/in/thijs-brandhorst/" target="_blank" rel="noopener no-referrer">
+          <i class="fa-brands fa-linkedin"></i>
+          <span>Linkedin</span>
+        </a>
+        <!--CV-->
+        <a href="Files/ThijsBrandhorstCV.pdf" target="_blank" rel="noopener no-referrer">
+          <i class="fa-solid fa-file-pdf"></i>
+          <span>CV</span>
+        </a>
+        <!--Email-->
+        <a href="mailto:thijsbrandhorst007@gmail.com">
+          <i class="fa-solid fa-envelope"></i>
+          <span>Email</span>
+        </a>
+      </div>
     </div>
   </nav>
-
+  
   <main>
     <!-- HERO -->
     <section class="hero">
@@ -125,11 +126,6 @@
         </div>
 
         <div class="cell">
-          <img src="images/node-logo.webp" alt="node logo" />
-          <span>Node.js</span>
-        </div>
-
-        <div class="cell">
           <img src="images/java-logo.webp" alt="java logo" />
           <span>Java</span>
         </div>
@@ -188,9 +184,17 @@
         <div class="cell">
           <img src="images/cardgame-logo.webp" alt="Cardgame logo" />
           <span>Cardgame</span>
-          <p>Cardgame met Java</p>
-          <a href="https://github.com/ThijsBrandhorst/CardGame" class="github-btn" target="_blank">GitHub</a>
+          <p>Card game met Java</p>
+          <a href="https://github.com/ThijsBrandhorst/WesternCardGame" class="github-btn" target="_blank">GitHub</a>
         </div>
+
+        <div class="cell">
+          <img src="images/mealMadness-logo.webp" alt="Meal Madness logo" />
+          <span>Meal Madness</span>
+          <p>Cooking game met C#</p>
+          <a href="https://github.com/ThijsBrandhorst/Meal-Madness" class="github-btn" target="_blank">GitHub</a>
+        </div>
+
       </div>
     </section>
 
