--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <link rel="stylesheet" href="css/media.css" defer />
 
   <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
+  <script src="js/env.js" defer></script>
   <script src="js/script.js" type="module" defer></script>
 
   <title>Portfolio</title>
